@@ -4,6 +4,9 @@ MNEMOSYNE 1.0
 (Note that for Windows users we recommend uninstalling the previous 
 version before doing an upgrade.)
 
+-removed a few rarely used options from the configuration dialog and
+ placed them in .mnemosyne/config.py, a new file which can be used to
+ set these and other rarely used options.
 -improve tooltips.
 -new logo, thanks to a contributor whose name sadly got lost in the 
  demise of the open-collab site.
@@ -13,6 +16,7 @@ version before doing an upgrade.)
  can contain python scripts which will be executed at run time and
  which can be used to customise Mnemosyne or add new features.
 -don't exit when final save failed (requested by lebowski_404).
+-added more supported sound and picture formats.
 -fixed 'Save as' option.
 
 	
